--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,38 +1,46 @@
-name: Server CI/CD
+name: Server Deploy
 
 on:
   push:
-    branches: [ "main" ]
     paths:
       - 'server/**'
-  pull_request:
-    branches: [ "main" ]
-    paths:
-      - 'server/**'
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: [self-hosted, server]
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-
-    defaults:
-      run:
-        working-directory: server
+  deploy-server:
+    name: Deploy Node Backend
+    runs-on:  [self-hosted, server]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: '18'
 
       - name: Install Dependencies
-        run: npm ci
+        working-directory: ./server
+        run: npm install
 
-      - name: Build Project
-        run: npm run build
+      - name: Copy Server Files to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "server/*"
+          target: "~/app/server"
+
+      - name: Restart Node Server with PM2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            pm2 delete server || true
+            pm2 start ~/app/server/server.js --name server
+            pm2 save
