--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,7 @@ jobs:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: 🔍 Debug Key Presence (optional but helpful)
-      - name: 🔍 Debug key presence
-        run: |
-          if [ -z "${{ secrets.EC2_SSH_KEY }}" ]; then
-            echo "❌ SSH key is empty!"
-            exit 1
-          else
-            echo "✅ SSH key is present."
-          fi
-
-      # Step 3: 🚀 Copy code to EC2
+      # Step 2: 🚀 Copy code to EC2
       - name: 🚀 Copy project to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -32,9 +22,9 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "."
-          target: "~/test"          # Ensure this path exists or will be created
+          target: "~/test"
 
-      # Step 4: 🛠️ SSH into EC2 and deploy
+      # Step 3: 🛠️ SSH into EC2 and deploy
       - name: 🛠️ Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -50,8 +40,7 @@ jobs:
             npm ci
 
             echo "🚀 Restarting backend using PM2"
-            pm2 delete backend || true
-            pm2 start npm --name backend -- start
+            pm2 restart backend || pm2 start npm --name backend -- start
             cd ..
 
             echo "📦 Installing client dependencies"
@@ -61,12 +50,14 @@ jobs:
             echo "⚙️ Building React app"
             npm run build
 
-            echo "🌐 Serving frontend with PM2"
-            pm2 delete frontend || true
-            pm2 serve build 3000 --name frontend --spa
+            echo "🌐 Restarting frontend with PM2"
+            pm2 restart frontend || pm2 serve build 3000 --name frontend --spa
             cd ..
 
             echo "💾 Saving PM2 process list"
             pm2 save
+
+            echo "🔁 Reloading Nginx"
+            sudo nginx -t && sudo systemctl reload nginx
 
             echo "✅ Deployment complete!"
