prefinal testing of ci-cd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
             npm run build
 
             echo "🌐 Restarting frontend with PM2"
-            pm2 restart frontend || pm2 serve build 3000 --name frontend --spa
+            pm2 serve dist 3000 --name frontend --spa
             cd ..
 
             echo "💾 Saving PM2 process list"
